err/abris.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/abris-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/abris_transform'...
Listing './lib/python3.5/site-packages/abris_transform/configuration'...
Compiling './lib/python3.5/site-packages/abris_transform/example.py'...
***   File "./lib/python3.5/site-packages/abris_transform/example.py", line 15
    print X, y
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/abris_transform/numpy_helpers'...
Listing './lib/python3.5/site-packages/abris_transform/parsing'...
Listing './lib/python3.5/site-packages/abris_transform/transformations'...
Compiling './lib/python3.5/site-packages/abris_transform/transformations/text_transformations.py'...
***   File "./lib/python3.5/site-packages/abris_transform/transformations/text_transformations.py", line 64
    print "Warning: %s not found in the vectorizer. Assigning a value of zero to it.\n" \
                                                                                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/abris_transform/type_manipulation'...
Listing './lib/python3.5/site-packages/abris_transform/type_manipulation/translation'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
